tests/postgres/ui-common/top_sql_unused_param_map_entry.stderr
error: sql_forge!: parameter :id is unused in the SQL template
  --> tests/postgres/tmp-ui/top_sql_unused_param_map_entry.rs:10:12
   |
10 |         ( :id = 1i64 ),
   |            ^^
